# Resume-Analyser

./: 01CVAgent.py  knowledgebase.py  pyproject.toml
